# protocol-v1

./: .gitignore  Anchor.toml  Cargo.toml  README.md  demo.sh  package-lock.json  package.json
.trunk/: trunk.yaml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  client.rs  main.rs
cli/src/commands/: admin.rs  debug.rs  init.rs  mod.rs  query.rs  submission.rs  token.rs  topic.rs  user.rs  vote.rs
cli/src/commands/admin/: config.rs  init.rs  mod.rs  token.rs  topic.rs  vote.rs
cli/src/commands/common/: pda.rs  time.rs  vote.rs
cli/src/commands/user/: debug.rs  mod.rs  query.rs  submission.rs  token.rs  topic.rs  user.rs  vote.rs
cli/src/utils/: mod.rs  pda.rs
docs/: BRANCH_SUMMARY.md  CROSS_TOPIC_SUMMARY.md  checklist.md  prd.md  vedas_mvp_focus.md
docs/diagrams/: README.md  protocol-workflow.md  revenue-sharing.md  token-flow.md
programs/alignment-protocol/: Cargo.toml
programs/alignment-protocol/src/: contexts.rs  data.rs  error.rs  helpers.rs  lib.rs
programs/alignment-protocol/src/instructions/: ai.rs  initialize.rs  mod.rs  submission.rs  tokens.rs  topics.rs  users.rs  votes.rs
programs/alignment_protocol/: Cargo.toml
programs/alignment_protocol/src/: lib.rs
tests/: README.md  alignment-protocol.orig.ts  alignment-protocol.ts  alignment_protocol.ts
tests/sections/: 01-initialization.ts  02-topic-management.ts  03-user-setup.ts  04-submission.ts  05-cross-topic-linking.ts  06-staking.ts  07-voting.ts  08-finalization.ts  09-token-locking-tests.ts  10-validation-tests.ts
tests/utils/: constants.ts  test-setup.ts
