[package]
name = "alignment-protocol-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "alignment-protocol-cli"
path = "src/main.rs"

[dependencies]
alignment-protocol = { path = "../programs/alignment-protocol", version = "0.2.0" }
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
shellexpand = "3.1.0"
tokio = "1.43.0"
dirs = "5.0.1"
